# j3sg

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  plan
dev/: dev_cert.pem  dev_key.pem
docs/public/: index.html
docs/public/getting-started/: index.html
docs/public/getting-started/installation/: index.html
docs/src/: index.md
docs/src/getting-started/: index.md  installation.md
docs/templates/: base.html
generator/: :w  Cargo.toml
generator/src/: main.rs
j3sg/: Cargo.toml
j3sg-gen/: Cargo.toml  README.md
j3sg-gen/src/: filesystem.rs  init.rs  lib.rs  page.rs  parse.rs  section.rs  sitemap.rs  uri.rs
j3sg-serve/src/: lib.rs
j3sg/src/: main.rs
pages/: 404.html  art.html  base-1.html  bio.html  blog.html  index.html  misc.html  notes.html  projects.html
pages/blog/: index.html
pages/projects/: index.html
pages_src/: 404  art  bio  blog  index  misc  notes  projects
server/: Cargo.toml
server/src/: lib.rs  main.rs
site/public/: index.html
site/public/art/: index.html
site/public/blog/: index.html
site/public/blog/first-blogpost/: index.html
site/public/misc/: index.html
site/public/notes/: index.html
site/public/projects/: index.html
site/src/: art.html  art.md  bio.html  blog.html  index.md  misc.md  notes.html  notes.md  projects.html  projects.md
site/src/blog/: first-blogpost.md
site/templates/: base-1.html
src/: lib.rs  main.rs  pages.rs  reload.rs  routes.rs
static/: reload.js  stylesheet.css
static/misc/: wordle_cmdline_solver.py
static/script/: reload.js
templates/: index.html  simple.html
