[package]
name = "jty_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
actix-web = { version = "4.3", features = ["openssl"] }
actix-files = "^0.6.0"
openssl = { version = "0.10" }

# Logging
env_logger = "0.10.0"

# Templating
tera = "1"

# Filesystem watching for live reload
actix = "0.13.0"
actix-web-actors = "4.1"
notify = "6.1.1"

# Utils
lazy_static = "1.4.0"
