[package]
name = "j3sg-gen"
authors = ["Jasper Ty"]
version = "0.3.0"
edition = "2021"
description = "A static site generation libary"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jasper-Ty/j3sg"

[dependencies]
colored = "2.0.4"
log = "0.4.20"
markdown = "1.0.0-alpha.12"
serde = { version="1.0", features=["derive"] }
serde_yaml = "0.9.25"
tera = "1.19.1"
