[package]
name = "j3sg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
j3sg-gen = { path = "../j3sg-gen" }
j3sg-serve = { path = "../j3sg-serve" }
log = "0.4.20"
